feat(api): add create room service
