# api/cmd/gotalk/docs/swagger.json
@@ -4,6 +4,34 @@
         "contact": {}
     },
     "paths": {
+        "/room/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create room",
+                "tags": [
+                    "Room"
+                ],
+                "summary": "CreateRoom",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Room"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
         "/user/create": {
             "post": {
                 "security": [
@@ -73,6 +101,25 @@
                     "type": "integer"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "Room": {
+            "type": "object",
+            "required": [
+                "id",
+                "isPrivate",
+                "ownerId"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "isPrivate": {
+                    "type": "boolean"
+                },
+                "ownerId": {
                     "type": "string"
                 }
             }
